# algolab

./: .gitignore  CMakeLists.txt  LICENSE  README.md
input/week7/diet/: sample.txt
src/: algocoon.cpp  ant_challenge.cpp  antenna.cpp  asterix_the_gaul.cpp  attack_of_the_clones.cpp  beach_bars.cpp  boats.cpp  buddy_selection.cpp  build_the_sum.cpp  burning_coins.cpp  carsharing.cpp  casino.cpp  chariot_race.cpp  deck_of_cards.cpp  defensive_line.cpp  diet.cpp  dominoes.cpp  even_matrices.cpp  even_pairs.cpp  evolution.cpp  first_hit.cpp  first_steps.cpp  germs.cpp  h1n1.cpp  hand.cpp  hiking_maps.cpp  hit.cpp  hongkong.cpp  idefix.cpp  important_bridges.cpp  inball.cpp  india.cpp  iron_islands.cpp  kingdom_defence.cpp  knights.cpp  lannister.cpp  legions.cpp  lestrade.cpp  marathon.cpp  maximizeit.cpp  (+19 more)
src/pow/: pow05_motorcycles.cpp  pow07_octopussy.cpp  pow07_surveillance.cpp  pow10_idefix.cpp  pow11_fleetrace.cpp
src/week10/: switzerland.cpp  worldcup.cpp
src/week7/: diet.cpp  maximizeit.cpp  radiation.cpp
src/week8/: bistro.cpp  clues.cpp
